--- a/package.json
+++ b/package.json
@@ -9,10 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.2",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
+    "@react-navigation/stack": "^7.2.2",
     "expo": "~52.0.40",
+    "expo-auth-session": "^6.0.3",
+    "expo-av": "^15.0.2",
+    "expo-blur": "^14.0.3",
+    "expo-crypto": "^14.0.2",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "^2.0.6",
+    "iconsax-react-native": "^0.0.8",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gif": "^1.0.3",
+    "react-native-gif-player": "^1.0.2",
+    "react-native-image-colors": "^2.4.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^15.11.2",
+    "react-native-switch": "^1.5.1",
+    "react-native-video": "^6.11.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
