--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.5.6",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
@@ -45,7 +46,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-switch": "^1.5.1",
     "react-native-video": "^6.11.0",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-navigation-shared-element": "^3.1.3",
+    "expo-video": "~2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
