--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.1.2",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-aria/slider": "^0.2.12",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -26,7 +28,9 @@
     "expo-blur": "^14.0.3",
     "expo-crypto": "^14.0.2",
     "expo-linear-gradient": "^14.0.2",
+    "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "~2.0.6",
     "iconsax-react-native": "^0.0.8",
     "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
@@ -46,8 +50,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-switch": "^1.5.1",
     "react-native-video": "^6.11.0",
-    "react-navigation-shared-element": "^3.1.3",
-    "expo-video": "~2.0.6"
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
