--- a/package.json
+++ b/package.json
@@ -9,45 +9,45 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-aria/slider": "^0.2.12",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.6",
-    "@react-native-google-signin/google-signin": "^13.2.0",
-    "@react-navigation/bottom-tabs": "^7.3.2",
-    "@react-navigation/native": "^7.0.18",
-    "@react-navigation/native-stack": "^7.3.2",
-    "@react-navigation/stack": "^7.2.2",
-    "expo": "~52.0.40",
-    "expo-auth-session": "^6.0.3",
-    "expo-av": "^15.0.2",
-    "expo-blur": "^14.0.3",
-    "expo-crypto": "^14.0.2",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-notifications": "^0.29.14",
-    "expo-status-bar": "~2.0.1",
+    "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "~53.0.0",
+    "expo-auth-session": "~5.4.0",
+    "expo-av": "~13.10.0",
+    "expo-blur": "~12.9.0",
+    "expo-crypto": "~12.9.0",
+    "expo-linear-gradient": "~12.7.0",
+    "expo-notifications": "~0.27.6",
+    "expo-status-bar": "~1.11.1",
     "expo-video": "~2.0.6",
     "iconsax-react-native": "^0.0.8",
-    "lottie-react-native": "^7.2.2",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "lottie-react-native": "6.5.1",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-gif": "^1.0.3",
     "react-native-gif-player": "^1.0.2",
     "react-native-image-colors": "^2.4.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "14.1.0",
     "react-native-switch": "^1.5.1",
     "react-native-video": "^6.11.0",
     "react-navigation-shared-element": "^3.1.3"
